--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yandex.praktikum",
+  "name": "express-mesto-gha",
   "version": "0.0.1",
   "description": "[![Tests](../../actions/workflows/tests-13-sprint.yml/badge.svg)](../../actions/workflows/tests-13-sprint.yml) [![Tests](../../actions/workflows/tests-14-sprint.yml/badge.svg)](../../actions/workflows/tests-14-sprint.yml) # Проект Mesto фронтенд + бэкенд",
   "main": "app.js",
@@ -8,16 +8,9 @@
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/OlgaDavlyud/express-mesto-gha.git"
-  },
+  "keywords": [],
   "author": "Olga Davlyud",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/OlgaDavlyud/express-mesto-gha/issues"
-  },
-  "homepage": "https://github.com/OlgaDavlyud/express-mesto-gha#readme",
   "devDependencies": {
     "eslint": "^8.38.0",
     "eslint-config-airbnb-base": "^15.0.0",
